# rata

./: .gitignore  README.rst  default.nix  rata.cabal  rata.code-workspace  register_addons.js  register_icons.js  rnv.sh
rnproject/: babel.config.js  index.firefoxos.js  index.tizenwatch.js  index.web.js  index.webos.js  metro.config.js  package.json  renative.json
rnproject/appConfigs/blank/: renative.json
rnproject/src/: app.js  register_components.js
src/: Dispatcher.hs  Infra.hs  InfraData.hs  InfraStyles.hs  Layer.hs  LayerTypes.hs  Main.hs  Menu.hs  Store.hs  Transform.hs  Views.hs
src/Icons/: Icon.hs  IconButton.hs
src/Maps/: Callout.hs  Circle.hs  CommonProps.hs  LocalTile.hs  MapView.hs  Marker.hs  Overlay.hs  Polygon.hs  Polyline.hs  Types.hs  UrlTile.hs
src/Navigation/: BottomTabNavigator.hs  BottomTabNavigatorNavigationOptions.hs  DrawerNavigator.hs  Navigation.hs  Types.hs
src/Svg/: SvgUri.hs  SvgXml.hs
