
name:                rata
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              Jyri-Matti Lähteenmäki
maintainer:          jyri-matti@lahteenmaki.net
build-type:          Simple
cabal-version:       >=1.10

executable rata
  main-is:             Main.hs
  build-depends:       base >=4.9 && <5.0,
                       text,
                       transformers,
                       time,
                       deepseq,
                       react-hs,
                       react-native-hs,
                       aeson,
                       containers,
                       network-uri,
                       bytestring,
                       ghcjs-fetch,
                       geojson,
                       lens
  if impl(ghcjs)
      build-depends: ghcjs-base
  else
      build-depends: ghcjs-base-stub
  hs-source-dirs:      src
  other-modules:       Store,
                       Views,
                       Menu,
                       LayerTypes,
                       Layer,
                       Infra,
                       Dispatcher,
                       Navigation.Navigation,
                       Maps.MapView,
                       Maps.Marker,
                       Maps.Circle,
                       Maps.Polyline,
                       Maps.Polygon,
                       Maps.Types,
                       Maps.UrlTile,
                       Svg.SvgUri
  default-language:    Haskell2010
  ghc-options: -W
  cpp-options: -DGHCJS_BROWSER

